--- a/Basiswebsite-thomasvdl-203/index.html
+++ b/Basiswebsite-thomasvdl-203/index.html
@@ -3,19 +3,82 @@
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="author" content="Thomas van der Linden">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>Howdy FED2122</title>
-	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
-	<h1>Howdy FED2122</h1>
 
-	<script src="scripts/script.js"></script>
+	<header>
+		<nav>
+			<ul>
+				<li><img src="./images/Tesla-logo.svg" alt=""></li>
+				<li><button></button></li>
+			</ul>
+		</nav>
+	</header>
+
+	<main>
+		<div id="wrapper">
+			
+			<section id="model-s">
+				<h1>Model 3</h1>
+				<a href=""> <p>Plan een contactloze testrit op locatie</p></a>
+
+				<a id="button" href=""> <p>configureren</p></a>
+				<a id="button" href=""> <p>Snel leverbaar</p></a>
+
+				<a href=""> <p>Meer informatie over Tesla voor bedrijven</p></a>
+			</section>
+			
+			<section id="model-3">
+				<h1>Model 3</h1>
+				<a href=""> <p>Plan een contactloze testrit op locatie</p></a>
+
+				<a id="button" href=""> <p>configureren</p></a>
+				<a id="button" href=""> <p>Snel leverbaar</p></a>
+
+				<a href=""> <p>Meer informatie over Tesla voor bedrijven</p></a>
+			</section>
+			
+			<section id="model-X">
+				<h1>Model 3</h1>
+				<a href=""> <p>Plan een contactloze testrit op locatie</p></a>
+
+				<a id="button" href=""> <p>configureren</p></a>
+				<a id="button" href=""> <p>Snel leverbaar</p></a>
+
+				<a href=""> <p>Meer informatie over Tesla voor bedrijven</p></a>
+			</section>
+			
+		</div>
+		<!-- <section id="model-3">
+			<h1>Model 3</h1>
+			<a href=""> <p>Plan een contactloze testrit op locatie</p></a>
+
+			<a id="button" href=""> <p>configureren</p></a>
+			<a id="button" href=""> <p>Snel leverbaar</p></a>
+
+			<a href=""> <p>Meer informatie over Tesla voor bedrijven</p></a>
+		</section>
+
+		<section id="model-3">
+			<h1>Model 3</h1>
+			<a href=""> <p>Plan een contactloze testrit op locatie</p></a>
+
+			<a id="button" href=""> <p>configureren</p></a>
+			<a id="button" href=""> <p>Snel leverbaar</p></a>
+
+			<a href=""> <p>Meer informatie over Tesla voor bedrijven</p></a>
+		</section> -->
+
+	</main>
+
+	<footer>
+
+	</footer>
 </body>
 	
 </html>
