--- a/index.html
+++ b/index.html
@@ -9,31 +9,39 @@
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
-<body>
-	<div id="footer-header">
-		<footer>
-			<a href=""> <p>Lees hier Tesla's impact rapport 2020</p></a>
-		</footer>
-
+<body class="home">
 		<header>
 			<nav>
 				<ul>
 					<li><img src="./img/Tesla-logo.svg" alt=""></li>
-					<li><button>button</button></li>
+					<li><button>Menu</button></li>
 				</ul>
+
+
+				
+				<ul>
+					<li>Model S</li>
+					<li>Model 3</li>
+					<li>Model X</li>
+					<li>Model Y</li>
+					<li>Cybertruck</li>
+				</ul>
+
+				<!-- P hoeft niet in li -->
+
 			</nav>
 		</header>
-	</div>
 
 	<main>
-		<div>
 
 			<section>
 				<h1>Model 3</h1>
-				<a href=""><p>Plan een contactloze testrit op locatie</p></a>
+				<a id="" href=""><p>Plan een contactloze testrit op locatie</p></a>
 
+				<div id="buttons">
 				<a href=""> <p>configureren</p></a>
 				<a href=""> <p>Snel leverbaar</p></a>
+				</div>
 
 				<a href=""> <p>Meer informatie over Tesla voor bedrijven</p></a>
 			</section>
@@ -41,24 +49,31 @@
 			<section>
 				<h1>Model Y</h1>
 
+				<div id="buttons">
 				<a href=""> <p>configureren</p></a>
 				<a href=""> <p>testrit</p></a>
+				</div>
 
-				<button></button>
 			</section>
 
 			<section>
 				<h1>Model S</h1>
 
+				<div id="buttons">
 				<a href=""> <p>configureren</p></a>
 				<a href=""> <p>Snel leverbaar</p></a>
+				</div>
+
 			</section>
 			
 			<section>
 				<h1>Model X</h1>
 				
+				<div id="buttons">
 				<a href=""> <p>configureren</p></a>
 				<a href=""> <p>Snel leverbaar</p></a>
+				</div>
+
 			</section>
 
 
@@ -66,26 +81,33 @@
 				<h1>Solar en Powerwall</h1>
 				<p>Energie voor alles</p>
 
+				<div id="buttons">
 				<a href=""> <p>meer informatie</p></a>
+				</div>
+
 			</section>
 
 			<section>
 				<h1>Accessoires</h1>
 
+				<div id="buttons">
 				<a href=""> <p>nu bestellen</p></a>
+				</div>
+			</section>
 
+			<footer>
 				<ul>
 					<li>Tesla 2021</li>
-					<li>Privacy % Wettelijk</li>
+					<li>Privacy & Wettelijk</li>
 					<li>Vacatures</li>		
 					<li>Nieuws</li>
 				</ul>
 
-			</section>
+			</footer>
 			
-		</div>
 
 	</main>
 </body>
-	
+
+<script src="./scripts/script.js"> </script>
 </html>
