--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
 					<li><img src="./img/Tesla-logo.svg" alt=""></li>
 					<li><button>Menu</button></li>
 				</ul>
-
-
 				
 				<ul>
-					<li>Model S</li>
-					<li>Model 3</li>
-					<li>Model X</li>
-					<li>Model Y</li>
-					<li>Cybertruck</li>
+					<li><button>terug</button></li>
+					<li><a href="index.html">Model 3</a></li>
+					<li><a href="index.html">Model S</a></li>
+					<li><a href="index.html">Model y</a></li>
+					<li><a href="index.html">Model X</a></li>
+					<li><a href="cybertruck.html">Cybertruck</a></li>
 				</ul>
-
+			
 				<!-- P hoeft niet in li -->
 
 			</nav>
@@ -38,10 +37,8 @@
 				<h1>Model 3</h1>
 				<a id="" href=""><p>Plan een contactloze testrit op locatie</p></a>
 
-				<div id="buttons">
 				<a href=""> <p>configureren</p></a>
 				<a href=""> <p>Snel leverbaar</p></a>
-				</div>
 
 				<a href=""> <p>Meer informatie over Tesla voor bedrijven</p></a>
 			</section>
@@ -49,30 +46,24 @@
 			<section>
 				<h1>Model Y</h1>
 
-				<div id="buttons">
-				<a href=""> <p>configureren</p></a>
+				<a href="c"> <p>configureren</p></a>
 				<a href=""> <p>testrit</p></a>
-				</div>
 
 			</section>
 
 			<section>
 				<h1>Model S</h1>
 
-				<div id="buttons">
 				<a href=""> <p>configureren</p></a>
 				<a href=""> <p>Snel leverbaar</p></a>
-				</div>
 
 			</section>
 			
 			<section>
 				<h1>Model X</h1>
 				
-				<div id="buttons">
 				<a href=""> <p>configureren</p></a>
 				<a href=""> <p>Snel leverbaar</p></a>
-				</div>
 
 			</section>
 
@@ -81,28 +72,23 @@
 				<h1>Solar en Powerwall</h1>
 				<p>Energie voor alles</p>
 
-				<div id="buttons">
 				<a href=""> <p>meer informatie</p></a>
-				</div>
 
 			</section>
 
 			<section>
 				<h1>Accessoires</h1>
 
-				<div id="buttons">
 				<a href=""> <p>nu bestellen</p></a>
-				</div>
 			</section>
 
 			<footer>
 				<ul>
-					<li>Tesla 2021</li>
-					<li>Privacy & Wettelijk</li>
-					<li>Vacatures</li>		
-					<li>Nieuws</li>
+					<li><a href=""> <p>tesla 2021</p></a></li>
+					<li><a href=""> <p>privacy & wettelijk</p></a></li>
+					<li><a href=""> <p>vacatures</p></a></li>		
+					<li><a href=""> <p>nieuws</p></a></li>
 				</ul>
-
 			</footer>
 			
 
