--- a/cybertruck.html
+++ b/cybertruck.html
@@ -38,7 +38,7 @@
 
         <section>
             <article>
-                <img src="./img/cyber/cybertruck_1.png" alt="foto van een futuristische auto, de tesla cybertruck.">
+                <img src="./img/cyber/cybertruck-1.png" alt="foto van een futuristische auto, de tesla cybertruck.">
                 <h1>Exoskeleton</h1>
                 <p>Cybertruck is built with an exterior shell made for 
                     ultimate durability and passenger protection. Starting 
@@ -47,14 +47,14 @@
                     from Ultra-Hard 30X Cold-Rolled stainless-steel structural 
                     skin to Tesla armor glass.</p>
 
-                <img src="./img/cyber/cybertruck_2.png" alt="een foto van het zijaanzicht van de cybertruck, een vierkant futuristisch voertuig.">
+                <img src="./img/cyber/cybertruck-2.png" alt="een foto van het zijaanzicht van de cybertruck, een vierkant futuristisch voertuig.">
                 <h2>Ultrahard, 30X cold-rolled stainless steel</h2>
                 <p>If there was something better, we’d use it. Help eliminate dents, 
                     damage and long-term corrosion with a smooth monochrome exoskeleton th
                     puts the shell on the outside of the car and provides you and your 
                     passengers maximum protection.</p>
 
-                <img src="./img/cyber/cybertruck_3.png" alt="een foto van het frame van de cybertruck, een solide sterk stuk aluminium.">
+                <img src="./img/cyber/cybertruck-3.png" alt="een foto van het frame van de cybertruck, een solide sterk stuk aluminium.">
                 <h2>Tesla armored glass</h2>
                 <p>Ultra-strong glass and polymer-layered composite can 
                     absorb and redirect impact force for improved 
@@ -70,7 +70,7 @@
         <section>
             <!-- Carousel/Snapscrolling section -->
           <article>
-              <img src="./img/cyber/cybertruck_car1.png" alt="een foto van een uitbreid set voor de cybertruck, een tent voor in de bak van de pickup.">
+              <img src="./img/cyber/cybertruck-car1.png" alt="een foto van een uitbreid set voor de cybertruck, een tent voor in de bak van de pickup.">
               <p>With up to 3,500 pounds of payload capacity and adjustable air suspension, 
                   Cybertruck is the most powerful tool we have ever built, engineered with 
                   100 cubic feet of exterior, lockable storage — including a magic tonneau 
@@ -78,7 +78,7 @@
           </article>
 
           <article>
-            <img src="./img/cyber/cybertruck_car2.png" alt="Een foto van quad in de bak van de pickup, de auto is multifunctioneel.">
+            <img src="./img/cyber/cybertruck-car2.png" alt="Een foto van quad in de bak van de pickup, de auto is multifunctioneel.">
             <h2>Vault-like storate</h2>
             <p>Space for your toolbox, tire and Cyberquad, with room to spare. 
                 Utilize 100 cubic feet of exterior, lockable storage — including the 
@@ -86,7 +86,7 @@
         </article>
 
         <article>
-            <img src="./img/cyber/cybertruck_car3.png" alt="">
+            <img src="./img/cyber/cybertruck-car3.png" alt="">
             <h2>Vault-like storate</h2>
             <p>Space for your toolbox, tire and Cyberquad, with room to spare. 
                 Utilize 100 cubic feet of exterior, lockable storage — including the 
@@ -97,7 +97,7 @@
 
         <section>
             <video  controls autoplay>
-            <source type="video/webm" src="./img/cyber/cybertruck_video.webm" alt="een video van de cybertruck die smooth over een weg door de woestijn rijdt.">
+            <source type="video/webm" src="./img/cyber/cybertruck-video.webm" alt="een video van de cybertruck die smooth over een weg door de woestijn rijdt.">
             </video>
 
             <h1>performance and efficiency</h1>
